full fix java version to 8